--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body class="bg-gradient-to-r from-gray-700 via-gray-900 to-black bg-no-repeat h-full w-full font-mono">
     <nav class=" text-slate-300 py-4 text-[22px] flex space-x-2 justify-between items-center mr-10 md:mr-20 ">
-        <a href="/" class="hover:text-violet-800 ml-10 md:ml-24 font-bold text-violet-600 ">Sasquatch Rex</a>
+        <a href="/school" class="hover:text-violet-800 ml-10 md:ml-24 font-bold text-violet-600 ">Sasquatch Rex</a>
         <div class="space-x-16 transition-all ease-in-out max-md:hidden ">
-            <a href="/about.html" class="hover:text-neutral-400 ">About</a>
-            <a href="/contact.html" class="hover:text-neutral-400 ">Contact</a>
+            <a href="/school/about" class="hover:text-neutral-400 ">About</a>
+            <a href="/school/contact" class="hover:text-neutral-400 ">Contact</a>
         </div>
         <div class="hidden max-md:block text-right mr-0 ">
             <a class="hamburger" onclick="htmlfunc(this);">
@@ -31,8 +31,8 @@
         
     </nav>
     <div class="hidden text-slate-300  h-full text-center space-y-0.5 align-middle  backdrop-blur-xl text-xl" id="hamm">
-        <a href="/about.html" class="hover:text-neutral-400 block px-3 mt-1 py-4  hover:bg-neutral-900">About</a>
-        <a href="/contact.html" class="hover:text-neutral-400 block py-4  hover:bg-neutral-900 ">Contact</a>
+        <a href="/school/about" class="hover:text-neutral-400 block px-3 mt-1 py-4  hover:bg-neutral-900">About</a>
+        <a href="/school/contact" class="hover:text-neutral-400 block py-4  hover:bg-neutral-900 ">Contact</a>
     </div>
     <div class="w-full h-full text-slate-400 lg:flex">
         <div class="lg:w-1/2 h-full mt-4 text-center ml-[10%]">
@@ -47,7 +47,7 @@
             </div>
             <div class="mt-5 mx-auto text-center xl:text-left">
                 <button
-                    class=" border-2 rounded-2xl border-black bg-violet-400 text-black px-3  py-2 hover:bg-violet-700 hover:text-white text-2xl animate-bounce transform transition-all hover:scale-110 "><a href="/contact.html">Contact Us</a></button>
+                    class=" border-2 rounded-2xl border-black bg-violet-400 text-black px-3  py-2 hover:bg-violet-700 hover:text-white text-2xl animate-bounce transform transition-all hover:scale-110 "><a href="/school/contact">Contact Us</a></button>
             </div>
             <div class="mt-44 mx-2">
                 <div class="text-4xl font-bold font-lato my-10 text-violet-600 ">What can you expect from us?</div>
@@ -81,9 +81,9 @@
     <footer class="bg-black text-white py-6  justify-between items-center min-[478px]:flex">
         <div class="space-x-14 mr-24 ">
 
-            <a href="/about.html" class="hover:text-neutral-400 ml-5">About</a>
+            <a href="/school/about" class="hover:text-neutral-400 ml-5">About</a>
             
-            <a href="/contact.html" class="hover:text-neutral-400">Contact</a>
+            <a href="/school/about" class="hover:text-neutral-400">Contact</a>
 
         </div>
         <div class="mr-10">
