--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome | Sasquatch Rex</title>
+    <title>Contact | Sasquatch Rex</title>
     <link rel="stylesheet" href="output.css">
     <link rel="icon" type="image/x-icon" href="logo.png">
 </head>
