--- a/about.html
+++ b/about.html
@@ -51,8 +51,7 @@
             </div>
             <div class="mt-5 mx-auto text-center xl:text-left">
                 <button
-                    class=" border-2 rounded-2xl border-black bg-violet-400 text-black px-3  py-1 hover:bg-violet-700 hover:text-white text-2xl animate-bounce">Contact
-                    Us</button>
+                    class=" border-2 rounded-2xl border-black bg-violet-400 text-black px-3  py-1 hover:bg-violet-700 hover:text-white text-2xl animate-bounce"><a href="/school/contact">Contact Us</a></button>
             </div>
             <div class="mt-44 mx-2">
                 <div class="text-4xl font-bold font-lato my-10 text-violet-600">What can you expect from us?</div>
